--- a/web/css/carousel.css
+++ b/web/css/carousel.css
@@ -14,11 +14,34 @@
     height:inherit;
     float:left;
 }
+/*下面点击按钮的样式，可定制*/
 .ui-carousel>.ui-carousel-ctrl{
-    border:1px solid red;
     height:40px;
     position: absolute;
     z-index:2;
     bottom:0;
     width:100%;
+    text-align: center;
+}
+.ui-carousel>.ui-carousel-ctrl>span{
+    border:1px solid #d9d9d9;
+    display:inline-block;
+    width:20px;
+    height:10px;
+    margin:0 2px;
+    cursor:pointer;
+    font-size:10px;
+    -webkit-transform: skewX(-45deg);
+    -moz-transform: skewX(-45deg);
+    -ms-transform: skewX(-45deg);
+    -o-transform: skewX(-45deg);
+    transform: skewX(-45deg);
+}
+.ui-carousel>.ui-carousel-ctrl>span:hover{
+    border:1px solid #07D6FF;
+    color:#000;
+}
+.ui-carousel>.ui-carousel-ctrl>span.active{
+    border:1px solid #1089ff;
+    color:#fff;
 }
